syntax="proto3";

package ocelot;

//option go_package = "/ocelot";

message JobInstanceMsg {
      string JobID = 1;
      string InstanceID = 2;
      int64 Ctime = 3; 
      int64 Mtime = 4;
      bool Success = 5;
      // WARNING: any.Any type resolves to map[string]interface{}, however plenty of 
      // warnings online about how this might be subject to change; for time being 
      // just use map string -> string
      map<string, string> Params = 6; 
}


service OcelotWorker {
      rpc Execute(JobInstanceMsg) returns (JobInstanceMsg) {}
      rpc ExecuteStream(stream JobInstanceMsg) returns (stream JobInstanceMsg) {}
}

